src/objects/LQ_Opportunity__x.object
<CustomObject>
    <fields>
        <fullName>COE_Involved_c__c</fullName>
        <externalDeveloperName>COE_Involved__c</externalDeveloperName>
        <label>COE Involved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biosimilars</fullName>
                </value>
                <value>
                    <fullName>Diabetes/Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases/Vaccines</fullName>
                </value>
                <value>
                    <fullName>Neurology and Pain</fullName>
                </value>
                <value>
                    <fullName>Neurosciences/Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Precision Medicine</fullName>
                </value>
                <value>
                    <fullName>Rare Diseases</fullName>
                </value>
                <value>
                    <fullName>COE Not Involved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRF_Pages_c__c</fullName>
        <externalDeveloperName>CRF_Pages__c</externalDeveloperName>
        <label>CRF Pages</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRO_Sponsor_c__c</fullName>
        <externalDeveloperName>CRO_Sponsor__c</externalDeveloperName>
        <label>CRO Sponsor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTL_CRA_Interview_Date_c__c</fullName>
        <externalDeveloperName>CTL_CRA_Interview_Date__c</externalDeveloperName>
        <label>zz?CTL/CRA Interview Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTL_c__c</fullName>
        <externalDeveloperName>CTL__c</externalDeveloperName>
        <label>zz?CTL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaR_Log_created_c__c</fullName>
        <externalDeveloperName>CaR_Log_created__c</externalDeveloperName>
        <label>CaR Log created</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_New_value_for_this_contract_a__c</fullName>
        <externalDeveloperName>Calculated_New_value_for_this_contract_a__c</externalDeveloperName>
        <label>z?Calculated_New_value_for_this_contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardiac_Safety_ECG_Equipment_c__c</fullName>
        <externalDeveloperName>Cardiac_Safety_ECG_Equipment__c</externalDeveloperName>
        <label>Cardiac Safety ECG Equipment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eli-250</fullName>
                </value>
                <value>
                    <fullName>Eli-150</fullName>
                </value>
                <value>
                    <fullName>Eli-10</fullName>
                </value>
                <value>
                    <fullName>H12+</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Setting_c__c</fullName>
        <externalDeveloperName>Care_Setting__c</externalDeveloperName>
        <label>Care Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory / outpatient setting</fullName>
                </value>
                <value>
                    <fullName>In-patient setting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Cancellation_Awarded_Price_c__c</fullName>
        <externalDeveloperName>Change_Cancellation_Awarded_Price__c</externalDeveloperName>
        <label>Total Change/Cancellation Awarded Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Cancellation_Not_Awarded_Date_c__c</fullName>
        <externalDeveloperName>Change_Cancellation_Not_Awarded_Date__c</externalDeveloperName>
        <label>Change/Cancellation Not Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Cancellation_Requested_Date_c__c</fullName>
        <externalDeveloperName>Change_Cancellation_Requested_Date__c</externalDeveloperName>
        <label>Change/Cancellation Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Order_Awarded_Date_c__c</fullName>
        <externalDeveloperName>Change_Order_Awarded_Date__c</externalDeveloperName>
        <label>Change Order Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Order_Number_Reference_c__c</fullName>
        <externalDeveloperName>Change_Order_Number_Reference__c</externalDeveloperName>
        <label>Change Order Number/Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Sent_to_Customer_Date_c__c</fullName>
        <externalDeveloperName>Change_Order_Sent_to_Customer_Date__c</externalDeveloperName>
        <label>Change Order Sent to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Type_c__c</fullName>
        <externalDeveloperName>Change_Type__c</externalDeveloperName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Contact_c__c</fullName>
        <externalDeveloperName>Client_Contact__c</externalDeveloperName>
        <label>Client Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closeout_Months_c__c</fullName>
        <externalDeveloperName>Closeout_Months__c</externalDeveloperName>
        <label>Closeout Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud9_Value_c__c</fullName>
        <externalDeveloperName>Cloud9_Value__c</externalDeveloperName>
        <label>C9 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments_c__c</fullName>
        <externalDeveloperName>Comments__c</externalDeveloperName>
        <label>Triage Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Region_c__c</fullName>
        <externalDeveloperName>Commercial_Region__c</externalDeveloperName>
        <label>Commercial Region</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Team_c__c</fullName>
        <externalDeveloperName>Commercial_Team__c</externalDeveloperName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>EU Management Adjustment</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Head Office Contingency</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ROW</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Tier 1 &amp; 2</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Integrated Market Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Bid_c__c</fullName>
        <externalDeveloperName>Competitive_Bid__c</externalDeveloperName>
        <label>Competitive Bid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Non Competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Name_c__c</fullName>
        <externalDeveloperName>Competitor_Name__c</externalDeveloperName>
        <label>Competitor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Overview_c__c</fullName>
        <externalDeveloperName>Competitor_Overview__c</externalDeveloperName>
        <label>Competitor Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_Level_c__c</fullName>
        <externalDeveloperName>Confidence_Level__c</externalDeveloperName>
        <label>Confidence Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Change Order Lost</fullName>
                </value>
                <value>
                    <fullName>Change Order Realized</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <externalDeveloperName>ContractId</externalDeveloperName>
        <label>Contract ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Required_c__c</fullName>
        <externalDeveloperName>Contract_Required__c</externalDeveloperName>
        <label>Contract Needed at this Time? (Yes/No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Template_c__c</fullName>
        <externalDeveloperName>Contract_Template__c</externalDeveloperName>
        <label>Contract Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Q Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type_c__c</fullName>
        <externalDeveloperName>Contract_Type__c</externalDeveloperName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary Agreement</fullName>
                </value>
                <value>
                    <fullName>Start-up Work Order</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>General Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Component_c__c</fullName>
        <externalDeveloperName>Contracts_Component__c</externalDeveloperName>
        <label>Contracts Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single service/Fees &lt;$1M/No TPV</fullName>
                </value>
                <value>
                    <fullName>Full service/Fees $1M-$4M/&lt;2 TPVs</fullName>
                </value>
                <value>
                    <fullName>New customer (no MSA)/Fees $4M-$50M/≥3 TPVs</fullName>
                </value>
                <value>
                    <fullName>RFP 5/&gt;$50M/&gt;1 study program/&gt;1 QIP budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_From_Proposal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Converted_From_Proposal__c</externalDeveloperName>
        <label>Converted From Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Point_Project_Code_c__c</fullName>
        <externalDeveloperName>Cost_Point_Project_Code__c</externalDeveloperName>
        <label>Cost Point Project Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cote_Orphan_Contract_Type_c__c</fullName>
        <externalDeveloperName>Cote_Orphan_Contract_Type__c</externalDeveloperName>
        <label>Cote Orphan Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cote_Orphan_Contract_turn_around_time_c__c</fullName>
        <externalDeveloperName>Cote_Orphan_Contract_turn_around_time__c</externalDeveloperName>
        <label>Cote Orphan Contract turn around time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent (3hours 9AM - 5PM)</fullName>
                </value>
                <value>
                    <fullName>End of Day (EOD)</fullName>
                </value>
                <value>
                    <fullName>Next Business Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_c__c</fullName>
        <externalDeveloperName>Count__c</externalDeveloperName>
        <label>Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_From_Proposal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Created_From_Proposal__c</externalDeveloperName>
        <label>Created From Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_CIRM_Awardee_c__c</fullName>
        <externalDeveloperName>Current_CIRM_Awardee__c</externalDeveloperName>
        <label>Current CIRM Awardee</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC1</fullName>
                </value>
                <value>
                    <fullName>AP1</fullName>
                </value>
                <value>
                    <fullName>CLIN 1</fullName>
                </value>
                <value>
                    <fullName>CLIN 2</fullName>
                </value>
                <value>
                    <fullName>DISC1</fullName>
                </value>
                <value>
                    <fullName>DISC2</fullName>
                </value>
                <value>
                    <fullName>DISC3</fullName>
                </value>
                <value>
                    <fullName>DR2A</fullName>
                </value>
                <value>
                    <fullName>DR3</fullName>
                </value>
                <value>
                    <fullName>EDUC1</fullName>
                </value>
                <value>
                    <fullName>INFR1</fullName>
                </value>
                <value>
                    <fullName>INFR2</fullName>
                </value>
                <value>
                    <fullName>PC1</fullName>
                </value>
                <value>
                    <fullName>RN3</fullName>
                </value>
                <value>
                    <fullName>SP1</fullName>
                </value>
                <value>
                    <fullName>SP3A</fullName>
                </value>
                <value>
                    <fullName>TR3</fullName>
                </value>
                <value>
                    <fullName>TR4</fullName>
                </value>
                <value>
                    <fullName>TRAN1</fullName>
                </value>
                <value>
                    <fullName>TRAN2</fullName>
                </value>
                <value>
                    <fullName>TRAN3</fullName>
                </value>
                <value>
                    <fullName>TRAN4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Exchange_Rate_c__c</fullName>
        <externalDeveloperName>Current_Exchange_Rate__c</externalDeveloperName>
        <label>zz?If yes, Exchange Rate</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Explicit_Need_s_c__c</fullName>
        <externalDeveloperName>Customer_Explicit_Need_s__c</externalDeveloperName>
        <label>Client Need(s)/Decision Making</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_Actioned_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Customer_Feedback_Actioned__c</externalDeveloperName>
        <label>zz?Customer Feedback Actioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Opportunity_Background_c__c</fullName>
        <externalDeveloperName>Customer_Opportunity_Background__c</externalDeveloperName>
        <label>Customer &amp; Opportunity Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Strategic_Goal_s_c__c</fullName>
        <externalDeveloperName>Customer_Strategic_Goal_s__c</externalDeveloperName>
        <label>Customer Strategic Goal(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regulator: Initial filing</fullName>
                </value>
                <value>
                    <fullName>Regulator: Label change</fullName>
                </value>
                <value>
                    <fullName>Regulator: Post marketing requirement/commitment</fullName>
                </value>
                <value>
                    <fullName>Regulator: Expanded access / compassionate use</fullName>
                </value>
                <value>
                    <fullName>Payer/HTA: Market access</fullName>
                </value>
                <value>
                    <fullName>Scientific Engagement: Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Rate_for_Exp_MR_c__c</fullName>
        <externalDeveloperName>Daily_Rate_for_Exp_MR__c</externalDeveloperName>
        <label>Daily Rate for Exp MR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Rate_for_InExp_MR_c__c</fullName>
        <externalDeveloperName>Daily_Rate_for_InExp_MR__c</externalDeveloperName>
        <label>Daily Rate for InExp MR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Source_c__c</fullName>
        <externalDeveloperName>Data_Source__c</externalDeveloperName>
        <label>Real-World Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary data capture only</fullName>
                </value>
                <value>
                    <fullName>Secondary data capture only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Mosaic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Contract_Signed_c__c</fullName>
        <externalDeveloperName>Date_Contract_Signed__c</externalDeveloperName>
        <label>Signed Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Converted_from_Pipeline_Prospect_c__c</fullName>
        <externalDeveloperName>Date_Converted_from_Pipeline_Prospect__c</externalDeveloperName>
        <label>Date Converted from Pipeline Prospect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Kits_Shipped_c__c</fullName>
        <externalDeveloperName>Date_Kits_Shipped__c</externalDeveloperName>
        <label>zz?Date Kits Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opportunity_Awarded_c__c</fullName>
        <externalDeveloperName>Date_Opportunity_Awarded__c</externalDeveloperName>
        <label>Opportunity Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Award_CIRM_c__c</fullName>
        <externalDeveloperName>Date_of_Award_CIRM__c</externalDeveloperName>
        <label>Date of Award</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_work_sted_is_due_to_st_c__c</fullName>
        <externalDeveloperName>Date_work_sted_is_due_to_st__c</externalDeveloperName>
        <label>Date work started/is due to start?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Selection_Criteria_c__c</fullName>
        <externalDeveloperName>Decision_Making_Selection_Criteria__c</externalDeveloperName>
        <label>Decision Making/Selection Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Organization_Involved_c__c</fullName>
        <externalDeveloperName>Delivery_Organization_Involved__c</externalDeveloperName>
        <label>Secondary Delivery Organization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCC</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>SDD</fullName>
                </value>
                <value>
                    <fullName>GRA</fullName>
                </value>
                <value>
                    <fullName>ECD</fullName>
                </value>
                <value>
                    <fullName>QI_CRO</fullName>
                </value>
                <value>
                    <fullName>Novella</fullName>
                </value>
                <value>
                    <fullName>MW</fullName>
                </value>
                <value>
                    <fullName>CRL</fullName>
                </value>
                <value>
                    <fullName>COH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delta_Value_c__c</fullName>
        <externalDeveloperName>Delta_Value__c</externalDeveloperName>
        <label>Delta Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dermatology_Proposal_Code_c__c</fullName>
        <externalDeveloperName>Dermatology_Proposal_Code__c</externalDeveloperName>
        <label>zzDermatology Proposal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_2_Action_date_c__c</fullName>
        <externalDeveloperName>Description_2_Action_date__c</externalDeveloperName>
        <label>Description 2 Action date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_2_c__c</fullName>
        <externalDeveloperName>Description_2__c</externalDeveloperName>
        <label>Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Action_date_c__c</fullName>
        <externalDeveloperName>Description_Action_date__c</externalDeveloperName>
        <label>Description Action date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Cost_per_Patient_c__c</fullName>
        <externalDeveloperName>Direct_Cost_per_Patient__c</externalDeveloperName>
        <label>Direct Cost per Patient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_c__c</fullName>
        <externalDeveloperName>Discount__c</externalDeveloperName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_for_Sales_Incentive_c__c</fullName>
        <externalDeveloperName>Discount_for_Sales_Incentive__c</externalDeveloperName>
        <label>Discount for Sales Incentive</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_Study_include_LNS_c__c</fullName>
        <externalDeveloperName>Does_Study_include_LNS__c</externalDeveloperName>
        <label>Does Study include LNS?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_study_have_c__c</fullName>
        <externalDeveloperName>Does_this_study_have__c</externalDeveloperName>
        <label>Does this study have:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One or more explicit scientific objectives</fullName>
                </value>
                <value>
                    <fullName>A study plan</fullName>
                </value>
                <value>
                    <fullName>Yes to both</fullName>
                </value>
                <value>
                    <fullName>No to either or both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Product_Name_c__c</fullName>
        <externalDeveloperName>Drug_Product_Name__c</externalDeveloperName>
        <label>Drug/Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECD_Lead_Delivery_c__c</fullName>
        <externalDeveloperName>ECD_Lead_Delivery__c</externalDeveloperName>
        <label>ECD Lead Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMR</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia Pac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECG_s_Per_Patient_c__c</fullName>
        <externalDeveloperName>ECG_s_Per_Patient__c</externalDeveloperName>
        <label>zz?ECG&apos;s Per Patient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDC_System_c__c</fullName>
        <externalDeveloperName>EDC_System__c</externalDeveloperName>
        <label>EDC System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
                <value>
                    <fullName>InForm</fullName>
                </value>
                <value>
                    <fullName>Rave</fullName>
                </value>
                <value>
                    <fullName>Merge eCOS</fullName>
                </value>
                <value>
                    <fullName>Medrio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDM_Reference_c__c</fullName>
        <externalDeveloperName>EDM_Reference__c</externalDeveloperName>
        <label>zz?EDM Reference</label>
        <type>Url</type>
    </fields>
</CustomObject>